--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -211,7 +211,6 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
@@ -274,21 +273,28 @@
                                 <strong>Documentación para licenciatura:</strong> </br></br>
                                 -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -</br>
-                                -</br>
-                                -</br>
-                                - </br></br>
+                                -Antecedentes académicos licenciatura</br>
+                                -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
+
 
                               </div>
 
@@ -342,7 +348,6 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
@@ -359,6 +364,7 @@
                                 -Curriculum
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
+
 
                               </div>
 
@@ -407,21 +413,28 @@
                                 <strong>Documentación para licenciatura:</strong> </br></br>
                                 -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -</br>
-                                -</br>
-                                -</br>
-                                - </br></br>
+                                -Antecedentes académicos licenciatura</br>
+                                -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
+
 
                               </div>
 
@@ -472,7 +485,6 @@
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
                                 -Carta motivos</br>
@@ -536,21 +548,27 @@
                                 <strong>Documentación para licenciatura:</strong> </br></br>
                                 -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -</br>
-                                -</br>
-                                -</br>
-                                - </br></br>
+                                -Antecedentes académicos licenciatura</br>
+                                -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
 
                               </div>
 
@@ -598,21 +616,27 @@
                                 <strong>Documentación para licenciatura:</strong> </br></br>
                                 -Antecedentes académicos bachillerato</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Maestría:</strong> </br></br>
-
                                 -Antecedentes académicos licenciatura</br>
                                 -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
                                 -Comprobante de domicilio</br>
                                 -Identificación</br></br>
 
                                 <strong>Documentación para Doctorado:</strong> </br></br>
-                                -</br>
-                                -</br>
-                                -</br>
-                                - </br></br>
+                                -Antecedentes académicos licenciatura</br>
+                                -Carta compromiso</br>
+                                -Carta motivos</br>
+                                -Constancia laboral
+                                -Curriculum
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
 
                               </div>
 
