--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -41,11 +41,11 @@
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
           <img src="img/Apostilla_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Convalidación</h5>
-          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonApostilla">Apostilla</a>
-          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonConvalidacion">Convalidación</a>
-          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonUnesco">CINE UNESCO</a>
-          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonEqusa">Equivalencia academica USA</a>
-          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonCpa">CPA</a>
+          <a href="latam#bloqueApostilla" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonApostilla">Apostilla</a>
+          <a href="latam#bloqueConvalidacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonConvalidacion">Convalidación</a>
+          <a href="latam#bloqueUnesco" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonUnesco">CINE UNESCO</a>
+          <a href="latam#bloqueEqusa" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonEqusa">Equivalencia academica USA</a>
+          <a href="latam#bloqueCpa" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonCpa">CPA</a>
         </div>
 
         <!--Servicio social-->
