--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -343,7 +343,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: </br> 
                                 <b>Certificado de programa academico -CPA</b>: Si</br> 
-                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.universidades.gob.es/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
