--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -148,7 +148,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: NO</br> 
                                 <b>Certificado de programa academico -CPA</b>: En caso SUNEDU lo exija</br> 
-                                <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -161,7 +161,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -174,7 +174,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -187,7 +187,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -200,7 +200,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI </br> 
-                                <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-titulo" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-titulo" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -213,7 +213,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: NO</br> 
-                                <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -226,7 +226,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -239,7 +239,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -252,7 +252,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: De requerirse</br> 
                                 <b>Certificado de programa academico -CPA</b>: De requerirse</br> 
-                                <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -265,7 +265,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -278,7 +278,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>: SI</br> 
-                                <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -291,7 +291,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>:</br> 
                                 <b>Certificado de programa academico -CPA</b>:</br> 
-                                <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -304,7 +304,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>:</br> 
-                                <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -317,7 +317,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>:</br> 
                                 <b>Certificado de programa academico -CPA</b>:</br> 
-                                <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -330,7 +330,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
                                 <b>Certificado de programa academico -CPA</b>:</br> 
-                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
@@ -343,7 +343,7 @@
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: </br> 
                                 <b>Certificado de programa academico -CPA</b>: Si</br> 
-                                <a href="https://www.universidades.gob.es/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                                <a href="https://www.universidades.gob.es/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
                               </p>
                             </div>
                           </div>
