--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -32,8 +32,8 @@
           <div class="card border-0">
             <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Modalidades servicio social.</h5>
-              <p class="card-text">Se agregan un conjunto de nuevas modalidades de servicio social, esto con el fin de que los alumnos tengan una mayor facilidad para realizar el trámite, las podrán encontrar en el apartado de servicio social.</p>
+              <h5 class="card-title">Modalidades servicio social</h5>
+              <p class="card-text">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social. La información a detalle se puede consultar  en el apartado de servicio social.</p>
             </div>
           </div>
         </div>
@@ -41,9 +41,9 @@
           <div class="card border-0">
             <img src="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Colegiatura final outselling.</h5>
-              <p class="card-text">Habrá Colegiatura final outselling, esta consiste en descuentos, pagos a plazos y está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular. 
-              Esto como tal no nos toca, pero es importante conocerlo. </p>
+              <h5 class="card-title">Colegiatura final outselling</h5>
+              <p class="card-text">
+                Consiste en descuentos o  pagos a plazos .Está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular.
             </div>
           </div>
         </div>
@@ -52,7 +52,7 @@
           <div class="card border-0">
             <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Equivalencia Ecuador.</h5>
+              <h5 class="card-title">Equivalencia Ecuador</h5>
               <p class="card-text">Para la equivalencia de Ecuador no es necesario que los egresados compren  el CPA, sin embargo si lo solicitan se trabajara. Quienes realizaron el pago del CPA y solicitan la carta CINE UNESCO, no deben realizar el pago del documento, esto aplica para las matrículas a las que aun se les solicitó el pago del CPA, con anterioridad.</p>
             </div>
           </div>
@@ -64,7 +64,9 @@
             <div class="card-body">
               <h5 class="card-title">Nuevas supervisiones</h5>
               <p class="card-text">
-                La supervisión de certificación queda a cargo de Jose Roberto Reyes Simbron, la supervisión de titulación pasa a Jessica Guzman Perez
+                José Roberto Reyes Simbrón, queda a cargo de la supervisión de certificación.<br/>
+ 
+                Jessica Guzmán Pérez queda a cargo de la supervisión de titulación.
               </p>
             </div>
           </div>
@@ -74,11 +76,9 @@
           <div class="card border-0">
             <img src="img/Noticias/aviso.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <h5 class="card-title"> Correspondencia escolar</h5>
               <p class="card-text">
-                Correspondencia escolar.
-                Es muy importante que no descuidemos esta parte y sigamos el proceso de forma adecuada para solicitar el préstamos o devolución. Si alguien tiene dudas sobre este proceso o no lo tiene claro, mándenme hang para que lo podamos revisar y resolver dudas.
-
+                Se incrementan las solicitudes de préstamo y devolución de documentos .Es importante que para dicha solicitud el alumno cuente con el formato correspondiente.
               </p>
             </div>
           </div>
@@ -88,9 +88,9 @@
           <div class="card border-0">
             <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Evento de entrega de documentos.</h5>
+              <h5 class="card-title">Evento de entrega de documentos</h5>
               <p class="card-text">
-                Es importante mencionar a los alumnos que para el evento del día 23 de septiembre solo acudan con un acompañante, esto con la finalidad de tener una mejor organización.
+                Es importante mencionar a nuestros egresados que para el evento del día 23 de septiembre solo pueden acudir  con un acompañante, esto con la finalidad de tener una mejor organización.
               </p>
             </div>
           </div>
