--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -33,7 +33,7 @@
             <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Modalidades servicio social</h5>
-              <p class="card-text">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social. La información a detalle se puede consultar  en el apartado de servicio social.</p>
+              <p class="card-text" style="text-align: justify;">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social. La información a detalle se puede consultar  en el apartado de servicio social.</p>
             </div>
           </div>
         </div>
@@ -42,8 +42,8 @@
             <img src="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Colegiatura final outselling</h5>
-              <p class="card-text">
-                Consiste en descuentos o  pagos a plazos .Está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular.
+              <p class="card-text" style="text-align: justify;">Consiste en descuentos o pagos a plazos. Está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular.</p>
+                
             </div>
           </div>
         </div>
@@ -53,7 +53,9 @@
             <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Equivalencia Ecuador</h5>
-              <p class="card-text">Para la equivalencia de Ecuador no es necesario que los egresados compren  el CPA, sin embargo si lo solicitan se trabajara. Quienes realizaron el pago del CPA y solicitan la carta CINE UNESCO, no deben realizar el pago del documento, esto aplica para las matrículas a las que aun se les solicitó el pago del CPA, con anterioridad.</p>
+              <p class="card-text" style="text-align: justify;">
+                Para la equivalencia de Ecuador no es necesario que los egresados compren  el CPA, sin embargo si lo solicitan se trabajara. Quienes realizaron el pago del CPA y solicitan la carta CINE UNESCO, no deben realizar el pago del documento, esto aplica para las matrículas a las que aun se les solicitó el pago del CPA, con anterioridad.
+              </p>
             </div>
           </div>
         </div>
@@ -63,7 +65,7 @@
             <img src="img/Noticias/equipoaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nuevas supervisiones</h5>
-              <p class="card-text">
+              <p class="card-text" style="text-align: justify;">
                 José Roberto Reyes Simbrón, queda a cargo de la supervisión de certificación.<br/>
  
                 Jessica Guzmán Pérez queda a cargo de la supervisión de titulación.
@@ -77,8 +79,8 @@
             <img src="img/Noticias/aviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Correspondencia escolar</h5>
-              <p class="card-text">
-                Se incrementan las solicitudes de préstamo y devolución de documentos .Es importante que para dicha solicitud el alumno cuente con el formato correspondiente.
+              <p class="card-text" style="text-align: justify;">
+                Se incrementan las solicitudes de préstamo y devolución de documentos. Es importante que para dicha solicitud el alumno cuente con el formato correspondiente.
               </p>
             </div>
           </div>
@@ -89,8 +91,8 @@
             <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Evento de entrega de documentos</h5>
-              <p class="card-text">
-                Es importante mencionar a nuestros egresados que para el evento del día 23 de septiembre solo pueden acudir  con un acompañante, esto con la finalidad de tener una mejor organización.
+              <p class="card-text text-align-justify" style="text-align: justify;">
+                Es importante mencionar a nuestros egresados que para el evento del día 23 de septiembre solo pueden acudir con un acompañante, esto con la finalidad de tener una mejor organización.
               </p>
             </div>
           </div>
