--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -54,7 +54,7 @@
             <div class="card-body">
               <h5 class="card-title">Equivalencia Ecuador</h5>
               <p class="card-text" style="text-align: justify;">
-                Para la equivalencia de Ecuador no es necesario que los egresados compren  el CPA, sin embargo si lo solicitan se trabajara. Quienes realizaron el pago del CPA y solicitan la carta CINE UNESCO, no deben realizar el pago del documento, esto aplica para las matrículas a las que aun se les solicitó el pago del CPA, con anterioridad.
+                SENESYT solicita carta CINE UNESCO, para trámite de convalidación. Los egresados que hayan realizado el pago del certificado de programa académico (CPA) quedan exentos del pago de la carta CINE UNESCO, esto aplica para las matrículas a las que aún se les solicitó el pago del CPA, con anterioridad.
               </p>
             </div>
           </div>
@@ -80,7 +80,7 @@
             <div class="card-body">
               <h5 class="card-title"> Correspondencia escolar</h5>
               <p class="card-text" style="text-align: justify;">
-                Se incrementan las solicitudes de préstamo y devolución de documentos. Es importante que para dicha solicitud el alumno cuente con el formato correspondiente.
+                Se incrementan las solicitudes de préstamo y devolución de documentos .Es importante que para dicha solicitud el alumno cuente con el formato correspondiente.
               </p>
             </div>
           </div>
