--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -39,7 +39,7 @@
                           
                         Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
 
-                        El tiempo estimado para la elaboración del documento es de 90 a 60 dias hábiles.</br>
+                        El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
                         -Certificado total de estudios emitido por autoridad educativa de México</br>
                         -Pago de tramite o beneficio en paquete</br>
@@ -125,7 +125,7 @@
                         
                         Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
 
-                        El tiempo estimado para la elaboración del documento es de 90 a 60 dias hábiles.</br>
+                        El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
                         -Título emitido por autoridad educativa de México</br>
                         -Pago de tramite o beneficio en paquete</br>
@@ -238,16 +238,43 @@
       <!--Convalidación-->
       <div class="bloque" id="bloqueConvalidacion">
         <div class="card border-0">
-          <h4><b>¿Qué es el Proceso de Convalidación LATAM?</b></h4></br>
+          <h4><b></b></h4></br>
           
           <a>
-            La convalidación de títulos es el reconocimiento que el Ministerio de Educación Nacional efectúa
-            sobre un título de educación superior otorgado por una institución legalmente autorizada en el
-            país de origen. Este reconocimiento permite adquirir los mismos efectos académicos y legales en
-            otro país que tienen los títulos otorgados por las Instituciones de Educación Superior.
+            
 
           </a>
 
+        </div>
+
+        <div class="card-body">
+
+          <div class="row">
+            <div class="col-md-8">
+
+              <h5 class="card-title">¿Qué es el Proceso de Convalidación LATAM?</h5></br>
+              <p class="card-text">
+                La convalidación de títulos es el reconocimiento que el Ministerio de Educación Nacional efectúa
+                sobre un título de educación superior otorgado por una institución legalmente autorizada en el
+                país de origen. Este reconocimiento permite adquirir los mismos efectos académicos y legales en
+                otro país que tienen los títulos otorgados por las Instituciones de Educación Superior.
+
+              </p>
+
+            </div>
+
+            <div class="col-md-4 card card-aviso py-3 px-3 border-0">
+
+              <h5>
+                Fichas tecnicas
+              </h5>             
+              <a class="Botonmanual py-3 text-center border-0" href="https://docs.google.com/spreadsheets/d/1xX0yIa7EIC44mCqtGQJOO7QmnxddH8gQtx5nylgIFpY/edit#gid=1909247615"
+                target="_blank">Abrir formulario
+              </a>
+
+            </div>
+          </div>
+          
         </div>
 
         <br/>
