--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -206,7 +206,7 @@
           <div class="row">
             <div class="col col-md-6">
               <br/>
-              <h4><b>CONVENCIÓN DE LA HAYA</b></h4></br>
+              <h4><b>Convención de la Haya</b></h4></br>
               <p>
               Con la Convención de La Haya se suprime el requisito de Legalización de los
               Documentos Públicos Extranjeros, adoptada en La Haya, mejor conocida como
