--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -456,29 +456,35 @@
 
                   <div class="pf card border-0 py-3 px-3" id="">
                     
-                    <h6><b>Constancia de estudios</b></h6>
-                     
-                     <br/>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Trámites en línea.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
 
-                    <a>
-                      Constancia de estudios <br/>
-                      Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/><br/>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Equivalencia.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
 
-                      Constancia de Pago<br/>
-                      Indica los pagos que ha realizado el alumno y los que tiene pendientes.<br/><br/>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Revalidación.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
 
-                      Para realizar el trámite de constancia se necesita:<br/><br/>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
 
-                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/><br/>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Servicio social.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
 
-                      -Tener tus pagos al corriente<br/><br/>
-
-                      Realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de tus pagos de colegiatura. Si realizas tu pago por otro medio deberás solicitar el trámite a tutoría enviando tu comprobante de pago.<br/><br/>
-
-                      Nota: Si realizas tu pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
-                      *En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
-
-                    </a>
+                    <video width="640" height="360" controls>
+                      <source src="videos/Trámites en línea.mp4" type="video/mp4">
+                      <p>Txd</p>
+                    </video>
                   </div>
 
                   
