--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -60,7 +60,7 @@
             <!--Lincenciatura--> 
             <div class="ImagenTituloYTexto col" id="bttl" >                              
             </div>
-
+  
             <!--Maestría--> 
             <div class="ImagenTituloYTexto col" id="bttm" >                              
             </div>
@@ -156,7 +156,7 @@
                           <div class="col card border-0 h-100" >
                             <div class="card-body">
                               <h5 class="card-title">COLOMBIA</h5>
-                              <p class="card-text">
+                              <p class="card-text ">
                                 <b>Entidad</b>: Ministerio de Educación Nacional</br>
                                 <b>Apostilla titulo</b>: SI</br> 
                                 <b>Apostilla certificado</b>: SI</br> 
@@ -575,7 +575,7 @@
                           archivo pdf y xml.</br></br>
       
                           Se deberán cubrir los siguientes requisitos:</br>
-                          -No tener adeudos </br>
+                          -No tener saldos pendientes </br>
                           -Pago del documento </br>
                           -Documentación completa </br>
                           
