--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -91,7 +91,7 @@
             <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Evento de entrega de documentos</h5>
-              <p class="card-text text-align-justify" style="text-align: justify;">
+              <p class="card-text" style="text-align: justify;">
                 Es importante mencionar a nuestros egresados que para el evento del día 23 de septiembre solo pueden acudir con un acompañante, esto con la finalidad de tener una mejor organización.
               </p>  
             </div>
