--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -665,7 +665,7 @@
       <!--CPA--> 
       <div class="bloque" id="bloqueCpa">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Certificado de programa académico para Proceso de Convalidación LATAM</b></h4></br>
+            <h4><b>Certificado de programa académico para proceso de convalidación LATAM</b></h4></br>
             
             <a>
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
