--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -20,7 +20,7 @@
 
           <h4><b>¿Qué es el apostillado?</b></h4></br>
           
-          <p>
+          <p style="text-align: justify;">
             La apostilla de La Haya es un método simplificado de legalización de documentos a efectos de verificar 
             su autenticidad en el ámbito del Derecho internacional privado. Físicamente consiste en una hoja que 
             se agrega a los documentos que la autoridad competente estampa sobre una copia del documento público.
@@ -237,15 +237,6 @@
 
       <!--Convalidación-->
       <div class="bloque" id="bloqueConvalidacion">
-        <div class="card border-0">
-          <h4><b></b></h4></br>
-          
-          <a>
-            
-
-          </a>
-
-        </div>
 
         <div class="card-body">
 
@@ -253,7 +244,7 @@
             <div class="col-md-8">
 
               <h5 class="card-title">¿Qué es el Proceso de Convalidación LATAM?</h5></br>
-              <p class="card-text">
+              <p class="card-text" style="text-align: justify;">
                 La convalidación de títulos es el reconocimiento que el Ministerio de Educación Nacional efectúa
                 sobre un título de educación superior otorgado por una institución legalmente autorizada en el
                 país de origen. Este reconocimiento permite adquirir los mismos efectos académicos y legales en
@@ -559,12 +550,12 @@
          <div class="card border-0">
           <h4><b>CINE UNESCO</b></h4></br>
           
-          <a>
+          <a style="text-align: justify;">
             Documento Institucional que se emite a los egresados de Ecuador interesados en realizar su convalidación. 
             Hace constar la Modalidad de estudios y los Campos CINE-UNESCO. Deben haber acreditado el 100% de créditos del plan de estudios 
             de licenciatura, maestría o doctorado. <br/><br/>
             El costo es de: $15.00 USD<br/><br/>
-            El tiempo estimado de entrega es de  días hábiles.
+            El tiempo estimado de entrega es de 15 a 30 días hábiles.
           </a>
 
               <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-4 my-1">
@@ -587,7 +578,7 @@
         <div class="card border-0 py-3 px-3" >
             <h4><b>Equivalencia academica USA</b></h4></br>
             
-            <a>
+            <a style="text-align: justify;">
                 Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
                 estadounidense, disfrutando de los mismos beneficios y condiciones tales como:</br></br>
 
@@ -667,7 +658,7 @@
         <div class="card border-0 py-3 px-3" >
             <h4><b>Certificado de programa académico para proceso de convalidación LATAM</b></h4></br>
             
-            <a>
+            <a style="text-align: justify;">
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
                 que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y 
                 certificado de estudios Utel. <br/><br/>
