--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -568,7 +568,7 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title text-center">Certificado parcial</h5>
-                        <p class="card-text">     
+                        <p class="card-text" style="text-align: justify;">     
                           
                           Documento que se proporciona al alumno, con el cual puede comprobar el avance curricular cursado al momento, 
                           emitido por la SEP. El proceso de certificación demora de 1 a 3 meses y el documento se comparte en digital en 
