--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -45,6 +45,13 @@
             <div class="avisoRojo" id="avisolic">  
             </div>
 
+            <div style="text-align:center;" >
+              <video width="80%" height="" controls>
+                <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
+                <p></p>
+            </video>
+            </div>
+
             <!--Como realizar tramite-->
             <div class="procesoTitNacional row" id="procesotitnacional">                        
             </div>
@@ -70,10 +77,22 @@
             </div>
           </div>
 
-          <!--Como realizar tramite-->
-          <div class="procesoTitNacional row" id="procesotitnacional">                        
+           
+
+          <div style="text-align:center;" >
+            <video width="80%" height="" controls>
+              <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
+              <p></p>
+           </video>
           </div>
-          
+
+          <!--Como realizar tramite-->
+          <div class="procesoTitNacional row" id="procesotitnacional">      
+                              
+          </div>
+
+         
+
 
         </div>
 
@@ -119,6 +138,13 @@
           </div>
           </div>
 
+          <div style="text-align:center;" >
+            <video width="80%" height="" controls>
+              <source src="videos/Certificación y titulación LATAM.mp4" type="video/mp4">
+              <p></p>
+           </video>
+          </div>
+
           <!--Fichas tecnicas-->
           <div class="px-2 py-2">
             <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -127,7 +153,7 @@
               
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  <button class="accordion-button border border-success collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                     FICHAS TECNICAS DE LATAM
                   </button>
                 </h2>
@@ -399,6 +425,8 @@
               </div>
             -->
           </div>
+
+          
 
           <!--Como realizar tramite-->
           <div class="procesoTitNacional row" id="procesotitnacional">                        
