--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -52,12 +52,24 @@
             }
           </script>
         </div>
-      </div>
+
+          
+        
       
     </div>
 
+ 
+
   </div>
  
+   <div style="text-align:center;" >
+              <video width="80%" height="" controls>
+                <source src="videos/Servicio social.mp4" type="video/mp4">
+                <p></p>
+            </video>
+            </div>
+        </div>
+
   </br>   
 
 
