--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -27,30 +27,29 @@
             <div class="subcontenedor">
               <!--Titulación-->   
               <div class="bloque activo" id="bloquePreguntasFrecuentesTitulacion">
-                  <h4><b>Preguntas frecuentes titulacion</b></h4></br>
+                  <h4><b>Preguntas frecuentes titulación</b></h4></br>
 
 
                   <div class="pf card border-0 py-3 px-3" id="spsuctsss" >
 
                   <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
                   <a>
-                    Se puede trabajar el certificado total siempre y cuando cumpla con:
+                    Se puede trabajar el certificado total siempre y cuando se cumpla con:
                     <br/><br/>
-                    -Documentación entregada.<br/>
-                    -colegiatura final cubierto.<br/>
-                    -Avance curricular y estatus de egresado.
+                    -Documentación digital completa.<br/>
+                    -Pago de documento o colegiatura final.<br/>
+                    -Avance curricular  con el 100% y estatus de egresado.
                     <br/><br/>
-                    El tramite de titulación quedara pausado hasta la liberación de servicio social, posteriormente se tiene que comunicar para solicitar seguimiento.
-
+                    El trámite de titulación quedará pausado hasta la liberación del servicio social, posteriormente el egresado  se tiene que comunicar para solicitar seguimiento.
                   </a>
 
                   </div>
 
                   <div class="pf card border-0 py-3 px-3" id="ctdetdt" >
 
-                  <h6><b>¿Cuanto tiempo dura el tramite de titulación?</b></h6>
+                  <h6><b>¿Cuánto tiempo dura el trámite de titulación?</b></h6>
                   <a>
-                    El trámite dura un estimado de 8 meses, a veces se puede extender por situaciones tanto internas como externas, hay que tener presente que los tiempos son estimados.
+                    El trámite dura un tiempo estimado de 8 meses.En ocasiones se puede extender por situaciones internas o externas.
                   </a>
 
                   </div>
@@ -61,11 +60,10 @@
                   <a>
                     Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
                     <br/><br/>
-                    Antecedentes académicos (Certificado de estudios). <br/>
+                    Antecedentes académicos (certificado de estudios). <br/>
                     Título (maestrías y doctorados). <br/>
                     Acta de nacimiento. <br/>
                     CURP.
-
                   </a>
 
                   </div>
@@ -74,16 +72,16 @@
 
                   <h6><b>¿Cuál es el costo de la colegiatura final?</b></h6>
                   <a>
-                    El pago de la colegiatura final tiene un costo de 15,000.00 pesos mexicanos en plataforma, hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido.
+                    El pago de la colegiatura final tiene un costo de $15,000.00 pesos mexicano Hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido en el paquete de inscripción.
                   </a>
 
                   </div>
 
                   <div class="pf card border-0 py-3 px-3" id="qhsuanqrtdmam" >
 
-                  <h6><b>¿Qué hacer si un alumno no quiere realizar trámite de máster a maestría?</b></h6>
+                  <h6><b>¿Qué hacer si un alumno no quiere realizar el trámite de cambio de programa de máster a maestría?</b></h6>
                   <a>
-                    Únicamente se le puede proporcionar un diploma de máster, para la obtención de cédula y titulo es necesario solicitar el cambio.
+                    Se informará al alumno que solo obtendrá un diploma con valor curricular .Solo con el cambio de programa a Maestría podrá obtener un grado académico
                   </a>
 
                   </div>
@@ -95,12 +93,11 @@
          
                 <div class="pf card border-0 py-3 px-3" id="RequisitosSS" >
 
-                  <h6><b>¿Qué necesito para realizar mi servicio social?</b></h6>
+                  <h6><b>¿Qué se necesita para realizar mi servicio social?</b></h6>
                   <a>
-                    Primeramente requieres cumplir con lo siguiente:</br></br>
-                    - Contar con al menos el 70% de avance curricular</br>
-                    - No presentar adeudo de ningún tipo</br>
-                    - Tener los documentos físicos entregados y validados</br>
+                    Se requieren cubrir los siguientes requisitos:</br></br>
+                    - Contar con  el 70% de avance curricular</br>
+                    - Documentación digital completa</br>
                   </a>
                 
                 </div>
@@ -471,13 +468,6 @@
                       <p>Txd</p>
                     </video>
 
-                    
-
-                    <video width="640" height="360" controls>
-                      <source src="videos/Servicio social.mp4" type="video/mp4">
-                      <p>Txd</p>
-                    </video>  
-
                     <video width="640" height="360" controls>
                       <source src="videos/Trámites en línea.mp4" type="video/mp4">
                       <p></p>
@@ -487,8 +477,6 @@
                   
 
               </div>
-
-              
 
               <!--Tutoria-->   
               <div class="bloque" id="bloquePreguntasFrecuentesTutoria">
