--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -35,7 +35,7 @@
 
                     <div class="row g-0">
 
-                      <div class="col-md-8">
+                      <div class="col-md-7">
                         <div class="card-body">
                           <h5 class="card-title text-center">Equivalencia</h5>
                           <p class="card-text">     
@@ -51,19 +51,17 @@
 
                           </p>
 
-                        </div>
-                        <div class="px-2 py-2">
-
-        
-                        </div>
-                        
+                        </div>                       
                         
                       </div>
 
 
 
-                      <div class="col-md-4">                        
-                        <img style="height: 300px" src="img/equivalencia.png">
+                      <div class="col-md-5">                        
+                        <video width="480" height="270" controls>
+                          <source src="videos/Equivalencia.mp4" type="video/mp4">
+                          <p></p>
+                        </video>
                       </div>
                     
                       
@@ -78,7 +76,7 @@
 
                     <div class="row g-0">
 
-                      <div class="col-md-8">
+                      <div class="col-md-7">
                         <div class="card-body">
                           <h5 class="card-title text-center">Revalidación</h5>
                           <p class="card-text">     
@@ -95,14 +93,13 @@
 
                         </div>
 
-                        <div class="px-2 py-2">
-                          
-        
-                        </div>
                       </div>
 
-                      <div class="col-md-4">
-                        <img style="height: 300px" src="img/revalidacion.png">
+                      <div class="col-md-5">
+                        <video width="480" height="270" controls>
+                          <source src="videos/Revalidación.mp4" type="video/mp4">
+                          <p></p>
+                        </video>
                       </div>
                     
                     </div>
