--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -45,11 +45,23 @@
             <div class="avisoRojo" id="avisolic">  
             </div>
 
-            <div style="text-align:center;" >
-              <video width="80%" height="" controls>
+            
+            <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-2 my-1">
+
+              <div class="col" style="text-align:center;" >
+              <video width="100%" height="" controls>
                 <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
                 <p></p>
             </video>
+            </div>
+
+            <div class="col" style="text-align:center;" >
+              <video width="100%" height="" controls>
+                <source src="videos/Proceso de certificación y titulación.mp4" type="video/mp4">
+                <p></p>
+            </video>
+            </div>
+                
             </div>
 
             <!--Como realizar tramite-->
@@ -77,22 +89,29 @@
             </div>
           </div>
 
-           
+          <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-2 my-1">
 
-          <div style="text-align:center;" >
-            <video width="80%" height="" controls>
-              <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
-              <p></p>
-           </video>
+            <div class="col" style="text-align:center;" >
+              <video width="100%" height="" controls>
+                <source src="videos/Requisitos de titulación.mp4" type="video/mp4">
+                <p></p>
+              </video>
+            </div>
+
+            <div class="col" style="text-align:center;" >
+              <video width="100%" height="" controls>
+                <source src="videos/Proceso de certificación y titulación.mp4" type="video/mp4">
+                <p></p>
+             </video>
+            </div>
+                
           </div>
+
 
           <!--Como realizar tramite-->
           <div class="procesoTitNacional row" id="procesotitnacional">      
                               
           </div>
-
-         
-
 
         </div>
 
